...
      >
        {explanation}
      </Txt>

      {/* Action */}
      <View style={styles.footer}>
        <Button label="CONTINUE" onPress={onDismiss} />
      </View>
    </View>
  );
}

export function IncorrectBody({ explanation, onDismiss, brand }: FeedbackBodyProps) {
...
